fix bg for scroll on mobile

--- a/public/app/css/styles.css
+++ b/public/app/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color:  #c7e5f2;
+    background-color: #c7e5f2;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -34,7 +34,7 @@ body {
     text-align: center;
 }
 
-.fa-plus, .fa-th-list{
+.fa-plus, .fa-th-list {
     margin-top: 30px;
     color: #E0A707;
     font-size: 90px;
@@ -75,7 +75,7 @@ body {
     flex-wrap: wrap;
     width: 100vw;
     max-height: 100vh;
-    background-color:  #c7e5f2;
+    background-color: #c7e5f2;
 }
 
 .box {
@@ -97,6 +97,7 @@ body {
     margin-top: 10px;
     position: relative;
 }
+
 .fa-arrow-left {
     font-size: 40px;
     position: fixed;
@@ -105,7 +106,7 @@ body {
     color: #062733;
 }
 
-.hide-complete{
+.hide-complete {
     background-color: #659EBE;
     display: inline-block;
     position: absolute;
@@ -120,15 +121,15 @@ body {
     box-shadow: 2px 2px 0px 0px grey;
 }
 
-.radio{
+.radio {
     background-color: #659EBE;
 }
 
-.completed{
+.completed {
     text-decoration: line-through;
 }
 
-.task-name{
+.task-name {
     border: none;
     background-color: #EFF3F4;
     font-size: 18px;
@@ -151,60 +152,60 @@ body {
     background-color: #659EBE;
     border-radius: 100%;
     position: absolute;
-    top: 50%; left: 50%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0 0.1em 0.3em rgba(0,0,0,0.3);
+    box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
 }
 
 /* toggle styling */
 
 .toggle-container {
     position: fixed;
-    bottom: 0; 
+    bottom: 0;
     left: 0;
     margin: 20px;
     height: 40px;
-  }
-  
-  /** Switch
+}
+
+/** Switch
    -------------------------------------*/
-  
-  .switch input {
+
+.switch input {
     position: absolute;
     opacity: 0;
-  }
-  
-  /**
+}
+
+/**
    * 1. Adjust this to size
    */
-  
-  .switch {
+
+.switch {
     display: inline-block;
-    font-size: 40px; /* 1 */
+    font-size: 40px;
+    /* 1 */
     height: 1em;
     width: 2em;
     background: rgb(91, 143, 173);
     border-radius: 1em;
-  }
-  
-  .switch div {
+}
+
+.switch div {
     height: 1em;
     width: 1em;
     border-radius: 1em;
     background: #FFF;
-    box-shadow: 0 0.1em 0.3em rgba(0,0,0,0.3);
+    box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
     -webkit-transition: all 300ms;
-       -moz-transition: all 300ms;
-            transition: all 300ms;
-  }
-  
-  .switch input:checked + div {
-    -webkit-transform: translate3d(100%, 0, 0);
-       -moz-transform: translate3d(100%, 0, 0);
-            transform: translate3d(100%, 0, 0);
-  }
-  
+    -moz-transition: all 300ms;
+    transition: all 300ms;
+}
 
+.switch input:checked+div {
+    -webkit-transform: translate3d(100%, 0, 0);
+    -moz-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+}
 
 /*Form Styling*/
 
@@ -365,6 +366,7 @@ input {
 }
 
 /* Shopping component */
+
 .inventory-container {
     width: 150px;
     max-height: calc(100vh - 180px);
@@ -403,6 +405,7 @@ input {
     width: 50px;
     z-index: 5;
 }
+
 .toy2 {
     position: fixed;
     left: 45%;
@@ -411,6 +414,7 @@ input {
     width: 50px;
     z-index: 5;
 }
+
 .toy3 {
     position: fixed;
     left: 55%;
@@ -419,6 +423,7 @@ input {
     width: 50px;
     z-index: 5;
 }
+
 .toy4 {
     position: fixed;
     left: 60%;
@@ -427,6 +432,7 @@ input {
     width: 50px;
     z-index: 5;
 }
+
 .toy5 {
     position: fixed;
     left: 49%;
@@ -436,18 +442,18 @@ input {
     z-index: 5;
 }
 
-
 /* ONLY FOR HIDING KEEP AT BOTTOM */
+
 .hide {
     display: none;
 }
 
-
-
 /* media queries */
+
 /* ipad pro */
-@media only screen and (max-width : 1024px) {
-   /* home */
+
+@media only screen and (max-width: 1024px) {
+    /* home */
     .nav-bar {
         top: 10px;
         transform: translateY(0%);
@@ -459,31 +465,31 @@ input {
     .main-container {
         margin-top: 60px;
     }
-
     .toggle-container {
         position: fixed;
         top: 0;
         right: 0;
         left: auto;
     }
-    
 }
 
 /* ipad */
-@media only screen and (max-width : 779px) {
+
+@media only screen and (max-width: 779px) {
     .main-container {
         justify-content: center;
     }
 }
 
-@media only screen and (max-width : 768px) {
+@media only screen and (max-width: 768px) {
     .dog {
         margin-top: 20px;
     }
 }
 
 /* iphone plus */
-@media only screen and (max-width : 414px) {
+
+@media only screen and (max-width: 414px) {
     .nav-bar {
         width: 202px;
         height: 100px;
@@ -493,32 +499,27 @@ input {
     }
     .nav-form, .nav-todo, .coin-container {
         height: 100px;
-        width: 100px;    
+        width: 100px;
     }
     .nav-form {
         border-radius: 15px 0 0 15px;
     }
-
     .nav-todo {
         border-radius: 0 15px 15px 0;
     }
-
-    .fa-plus, .fa-th-list{
+    .fa-plus, .fa-th-list {
         margin: 20px;
         font-size: 60px;
     }
-
     .fa-th-list:hover, .fa-plus:hover {
         font-size: 60px;
     }
-
     .currency {
         left: 45%;
         padding: 8px;
         border-radius: 100%;
         background-color: #E0BC63;
     }
-
     .inventory-container {
         width: 100px;
         max-height: calc(100vh - 130px);
@@ -526,32 +527,26 @@ input {
         right: 10px;
         background-color: #EFF3F4;
     }
-
     .items {
         width: 100px;
         height: 100px;
     }
-
     /* form styling */
     .low, .medium, .high {
         width: 80px;
     }
-
     .task-type-contain {
-       flex-direction: column;
+        flex-direction: column;
     }
-
 }
 
 /* iphone x */
-@media only screen and (max-width : 320px) {
+
+@media only screen and (max-width: 320px) {
     .coin-container {
         right: 5px;
     }
-
     .nav-bar {
         left: 5px;
     }
-
 }
-
